--- a/TED Talks.html
+++ b/TED Talks.html
@@ -3,6 +3,10 @@
   <meta charset="utf-8"/>
  </head>
  <body>
+  <a href="http://ted.com/talks/simone_giertz_why_you_should_make_useless_things?language=ko">
+   우리가 쓸데없는 것을 만들어야 하는 이유
+  </a>
+  <br/>
   <a href="http://ted.com/talks/ibeyi_vale_river?language=ko">
    "Valé" / "River"
   </a>
@@ -119,6 +123,10 @@
    남극 빙하 밑 수 킬로미터를 들여다보는 방법
   </a>
   <br/>
+  <a href="http://ted.com/talks/wendy_suzuki_the_brain_changing_benefits_of_exercise?language=ko">
+   뇌를 변화시키는 운동의 이점
+  </a>
+  <br/>
   <a href="http://ted.com/talks/chuck_nice_a_funny_look_at_the_unintended_consequences_of_technology?language=ko">
    기술의 의도치 않은 결과에 대한 조롱
   </a>
@@ -137,14 +145,6 @@
   <br/>
   <a href="http://ted.com/talks/nilay_kulkarni_a_life_saving_invention_that_prevents_human_stampedes?language=ko">
    압사사고를 방지하고 생명을 구하는 발명
-  </a>
-  <br/>
-  <a href="http://ted.com/talks/margaret_mitchell_how_we_can_build_ai_to_help_humans_not_hurt_us?language=ko">
-   인류에게 해를 끼치지 않고 도움이 되는 인공지능(AI) 을 어떻게 만들어야 할까요?
-  </a>
-  <br/>
-  <a href="http://ted.com/talks/wale_oyejide_fashion_that_celebrates_african_strength_and_spirit?language=ko">
-   아프리카의 힘과 정신을 기념하는 패션
   </a>
   <br/>
  </body>
